hiding/removing some stuff

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
   </p>
   <p>
   he graduated from the georgia institute of technology 
-  with a bachelors in computer engineering (3.92 gpa).
+  with a bachelors in computer engineering.
   </p>
   <p>
   he is currently employed and reverse engineers a variety of software and hardware/systems.
