--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
   <div class="back-btn">
     <a href="/">back</a>
   </div>
-  <h4>About</h4>
+  <h4>about</h4>
   <p>
   nicholas schantz is skilled in reverse engineering, vulnerability research, and exploit development.
   </p>
